--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -45,6 +45,8 @@ template {
 }
 a {
   background-color: transparent;
+  color: inherit;
+  text-decoration: none;
   -webkit-text-decoration-skip: objects;
 }
 a:active,
@@ -270,7 +272,7 @@ h3 {
   font-family: Roboto Slab, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
-  font-size: 1.38316rem;
+  font-size: 1.2rem;
   line-height: 1.1;
 }
 h4 {
