override color at build

--- a/src/styles/fullpage.css
+++ b/src/styles/fullpage.css
@@ -4,9 +4,9 @@
 .fp-slidesNav ul li a span,
 .fp-slidesNav ul li:hover a.active span,
 .fp-slidesNav ul li a.active span {
-  background: #FF240E
+  background: #FF240E !important
 }
 
 #fp-nav ul li .fp-tooltip {
-  color: #FF240E 
+  color: #FF240E !important
 }
