--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -435,13 +435,15 @@ fieldset {
   margin-bottom: 1.45rem;
 }
 blockquote {
-  margin-left: 1.45rem;
-  margin-right: 1.45rem;
+  background-color: #f5f2f0;
+  border-left: .25rem solid #ccc;
+  margin-left: 0;
+  margin-right: 0;
   margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
+  padding-bottom: 1.45rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 1.45rem;
   margin-bottom: 1.45rem;
 }
 form {
