fix: unify style for date

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -639,3 +639,8 @@ code .token.operator {
 .footnotes p {
   display: contents;
 }
+.date {
+  color: #999;
+  font-family: 'Roboto Slab', san-serif;
+  font-size: 16px;
+}
