--- a/src/styles/spotify.css
+++ b/src/styles/spotify.css
@@ -2,18 +2,21 @@
   font-family: 'Circular Spotify Text';
   src: url('../fonts/CircularSpotifyTxT-Black.woff2');
   font-weight: bolder;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Circular Spotify Text';
   src: url('../fonts//CircularSpotifyTxT-Book.woff2');
   font-weight: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Circular Spotify Text';
   src: url('../fonts/CircularSpotifyTxT-Bold.woff2');
   font-weight: bold;
+  font-display: swap;
 }
 
 .fade-in {
